# seba-sqlite

./: .gitignore  README.md  pyproject.toml
src/seba_sqlite/: __init__.py  batch.py  calculation_result.py  control_definition.py  control_value.py  database.py  experiment.py  function.py  gradient_result.py  realization.py  simulation.py  simulation_result.py  snapshot.py  sqlite_storage.py
tests/: conftest.py  database_utils.py  test_database.py  test_database_batch.py  test_database_calculation_result.py  test_database_control_definition.py  test_database_control_value.py  test_database_experiment.py  test_database_function.py  test_database_gradient_result.py  test_database_realization.py  test_database_simulation.py  test_database_simulation_result.py  test_merit_values.py  test_seba_snapshot.py
tests/test_data/: seba.db
