[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "seba_sqlite"
description = "Legacy sqlite storage for Seba"
classifiers = [
    "Programming language :: Python",
    "Programming language :: Python :: 3.8",
    "Programming language :: Python :: 3.9",
    "Programming language :: Python :: 3.10",
    "Programming language :: Python :: 3.11",
]
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
include = ["seba_sqlite"]

[tool.setuptools.package-data]
seba_sqlite = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "seba_sqlite.version.__version__"}

[tool.setuptools_scm]
write_to = "src/seba_sqlite/version.py"
